Added Alan Nichols (Sun) to the list of contributors.

--- a/README
+++ b/README
@@ -15,6 +15,7 @@
 	       Iouri Pakhomenko	 <pakhomenko@gmd.de>
 		   Niels Bakker	 <niels@euro.net>
 		  Mike Mitchell  <mcm@unx.sas.com>
+                   Alan Nichols  <Alan.Nichols@Ebay.Sun.COM>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
