Added Mike McCauley's credit.

--- a/README
+++ b/README
@@ -16,6 +16,7 @@
 		   Niels Bakker	 <niels@euro.net>
 		  Mike Mitchell  <mcm@unx.sas.com>
                    Alan Nichols  <Alan.Nichols@Ebay.Sun.COM>
+                  Mike McCauley  <mikem@open.com.au>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
