--- a/README
+++ b/README
@@ -1,6 +1,12 @@
 		       SNMP support for Perl 5
 		       -----------------------
 
+		Copyright (c) 1995-1999, Simon Leinen
+			 All rights reserved
+
+This program is free software; you can redistribute it under the
+"Artistic License" included in this distribution (file "Artistic").
+
 	       Author: Simon Leinen  <simon@switch.ch>
 			    Contributors:
 		 Tobias Oetiker	 <oetiker@ee.ethz.ch>
@@ -17,6 +23,7 @@
 		  Mike Mitchell  <mcm@unx.sas.com>
                    Alan Nichols  <Alan.Nichols@Ebay.Sun.COM>
                   Mike McCauley  <mikem@open.com.au>
+		Andrew W. Elble  <elble@icculus.nsg.nwu.edu>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
