Added contributors: Paul E. Erkkila, Johannes Demel.

--- a/README
+++ b/README
@@ -24,6 +24,8 @@ This program is free software; you can redistribute it under the
                    Alan Nichols  <Alan.Nichols@Ebay.Sun.COM>
                   Mike McCauley  <mikem@open.com.au>
 		Andrew W. Elble  <elble@icculus.nsg.nwu.edu>
+		Paul E. Erkkila  <pee@gblx.net>
+		 Johannes Demel  <demel@zid.tuwien.ac.at>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
