--- a/README
+++ b/README
@@ -26,6 +26,7 @@ This program is free software; you can redistribute it under the
 		Andrew W. Elble  <elble@icculus.nsg.nwu.edu>
 		Paul E. Erkkila  <pee@gblx.net>
 		 Johannes Demel  <demel@zid.tuwien.ac.at>
+		 Rik Hoorelbeke  <rik.hoorelbeke@pandora.be>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
