--- a/README
+++ b/README
@@ -27,6 +27,7 @@ This program is free software; you can redistribute it under the
 		Paul E. Erkkila  <pee@gblx.net>
 		 Johannes Demel  <demel@zid.tuwien.ac.at>
 		 Rik Hoorelbeke  <rik.hoorelbeke@pandora.be>
+		 Brett T Warden  <wardenb@eluminant.com>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
