--- a/trunk/README
+++ b/trunk/README
@@ -29,6 +29,7 @@ This program is free software; you can redistribute it under the
 		 Rik Hoorelbeke  <rik.hoorelbeke@pandora.be>
 		 Brett T Warden  <wardenb@eluminant.com>
 		 Alistair Mills  <alistair@alizta.com>
+		  Bert Driehuis  <driehuis@playbeing.org>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
