--- a/trunk/README
+++ b/trunk/README
@@ -30,6 +30,7 @@ This program is free software; you can redistribute it under the
 		 Brett T Warden  <wardenb@eluminant.com>
 		 Alistair Mills  <alistair@alizta.com>
 		  Bert Driehuis  <driehuis@playbeing.org>
+                 Michael Deegan  <michael@cnspc18.murdoch.edu.au>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
