--- a/README
+++ b/README
@@ -31,6 +31,7 @@ This program is free software; you can redistribute it under the
 		 Alistair Mills  <alistair@alizta.com>
 		  Bert Driehuis  <driehuis@playbeing.org>
                  Michael Deegan  <michael@cnspc18.murdoch.edu.au>
+           Jakob Ilves (/IlvJa)  <jakob.ilves@oracle.com>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
