Updated Philippe Simonet's e-mail.
Added Valerio Bontempi and Lorenzo Colitti.

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ This program is free software; you can redistribute it under the
 		      Dave Rand	 <dlr@Bungi.com>
 		   Heine Peters	 <peters@dkrz.de>
 		      Yufang HU	 <yhu@casc.com>
-	       Philippe Simonet	 <sip00@vg.swissptt.ch>
+	       Philippe Simonet	 <Philippe.Simonet@swisscom.com>
 	      Daniel L. Needles	 <dan_needles@INS.COM>
 			Dan Cox	 <dcox@lexmark.com>
 	       Iouri Pakhomenko	 <pakhomenko@gmd.de>
@@ -33,6 +33,8 @@ This program is free software; you can redistribute it under the
                  Michael Deegan  <michael@cnspc18.murdoch.edu.au>
            Jakob Ilves (/IlvJa)  <jakob.ilves@oracle.com>
 		   Jan Kasprzak  <kas@informatics.muni.cz>
+	       Valerio Bontempi  <v.bontempi@inwind.it>
+		Lorenzo Colitti  <lorenzo@colitti.com>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
