Added Christopher J. Tengi to contributors list.

--- a/README
+++ b/README
@@ -36,6 +36,7 @@ This program is free software; you can redistribute it under the
 	       Valerio Bontempi  <v.bontempi@inwind.it>
 		Lorenzo Colitti  <lorenzo@colitti.com>
 		   Joerg Kummer  <JOERG.KUMMER@Roche.COM>
+           Christopher J. Tengi  <tengi@CS.Princeton.EDU>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
